--- a/index.html
+++ b/index.html
@@ -11,29 +11,66 @@
 <body>
     <section class="text-gray-600 body-font">
         <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
-            <div class="flex flex-row gap-x-5">
+            <div class="flex flex-row gap-x-5 justify-center">
                 <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded-2xl" alt="hero"
-                     src="./imgs/DE98C237-B9DC-4939-B41E-EC01EDBAFA43_1_105_c.jpeg">
-                <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded-2xl" alt="hero"
-                     src="./imgs/2022-06-27%2006-54.jpeg">
+                     src="./imgs/F9087410-81B0-40C5-9716-094195A09F7F_1_105_c.jpeg">
             </div>
             <div class="text-center lg:w-2/3 w-full">
                 <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Avery George's Very Good Home
                     Service</h1>
-                <p class="mb-8 leading-relaxed">Meggings kinfolk echo park stumptown DIY, kale chips beard jianbing
-                    tousled. Chambray dreamcatcher trust fund, kitsch vice godard disrupt ramps hexagon mustache umami
-                    snackwave tilde chillwave ugh. Pour-over meditation PBR&amp;B pickled ennui celiac mlkshk freegan
-                    photo booth af fingerstache pitchfork.</p>
-                <div class="flex justify-center">
-                    <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">
-                        Button
-                    </button>
-                    <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">
-                        Button
-                    </button>
+                <p class="mb-8 leading-relaxed">Hi, I'm Avery. The things that I am going to do is: everything! Even dog
+                    poop scooping.</p>
+
+            </div>
+            <div class="flex ">
+                <div class="flex justify-center flex-wrap gap-5">
+                    <div class="block p-6 rounded-lg shadow-lg bg-pink-300 max-w-md">
+                        <h5 class="text-gray-900 text-xl leading-tight font-medium mb-2">Poop Scooping</h5>
+                        <p class="text-gray-700 text-base mb-4">
+                            Some quick example text to build on the card title and make up the bulk of the card's
+                            content.
+                        </p>
+                    </div>
+                    <div class="block p-6 rounded-lg shadow-lg bg-blue-300 max-w-md">
+                        <h5 class="text-gray-900 text-xl leading-tight font-medium mb-2">Water Plants</h5>
+                        <p class="text-gray-700 text-base mb-4">
+                            Some quick example text to build on the card title and make up the bulk of the card's
+                            content.
+                        </p>
+                    </div>
+                    <div class="block p-6 rounded-lg shadow-lg bg-yellow-300 max-w-md">
+                        <h5 class="text-gray-900 text-xl leading-tight font-medium mb-2">Sweep Porch</h5>
+                        <p class="text-gray-700 text-base mb-4">
+                            Some quick example text to build on the card title and make up the bulk of the card's
+                            content.
+                        </p>
+                    </div>
+                    <div class="block p-6 rounded-lg shadow-lg bg-green-300 max-w-md">
+                        <h5 class="text-gray-900 text-xl leading-tight font-medium mb-2">Pull Weeds</h5>
+                        <p class="text-gray-700 text-base mb-4">
+                            Some quick example text to build on the card title and make up the bulk of the card's
+                            content.
+                        </p>
+                    </div>
+                    <div class="block p-6 rounded-lg shadow-lg bg-purple-300 max-w-md">
+                        <h5 class="text-gray-900 text-xl leading-tight font-medium mb-2">Clean Windows</h5>
+                        <p class="text-gray-700 text-base mb-4">
+                            Some quick example text to build on the card title and make up the bulk of the card's
+                            content.
+                        </p>
+                    </div>
+                    <div class="block p-6 rounded-lg shadow-lg bg-red-300 max-w-md">
+                        <h5 class="text-gray-900 text-xl leading-tight font-medium mb-2">Draw Pictures</h5>
+                        <p class="text-gray-700 text-base mb-4">
+                            Some quick example text to build on the card title and make up the bulk of the card's
+                            content.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
+
+
     </section>
 </body>
 </html>
