--- a/index.html
+++ b/index.html
@@ -22,48 +22,42 @@
                     poop scooping.</p>
 
             </div>
-            <div class="flex ">
-                <div class="flex justify-center flex-wrap gap-5">
-                    <div class="block p-6 rounded-lg shadow-lg bg-pink-300 max-w-md">
-                        <h5 class="text-gray-900 text-xl leading-tight font-medium mb-2">Poop Scooping</h5>
+            <div>
+                <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-3 auto-rows-fr">
+                    <div class="block p-6 rounded-lg shadow-lg bg-pink-300">
+                        <h5 class="text-gray-900 text-xl leading-tight font-medium">Poop Scooping</h5>
                         <p class="text-gray-700 text-base mb-4">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content.
+                            I already have all the materials!
                         </p>
                     </div>
-                    <div class="block p-6 rounded-lg shadow-lg bg-blue-300 max-w-md">
+                    <div class="block p-6 rounded-lg shadow-lg bg-blue-300">
                         <h5 class="text-gray-900 text-xl leading-tight font-medium mb-2">Water Plants</h5>
                         <p class="text-gray-700 text-base mb-4">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content.
+                            When your plants are parched...</br>(mom is still working on a catchy saying)
                         </p>
                     </div>
-                    <div class="block p-6 rounded-lg shadow-lg bg-yellow-300 max-w-md">
+                    <div class="block p-6 rounded-lg shadow-lg bg-yellow-300">
                         <h5 class="text-gray-900 text-xl leading-tight font-medium mb-2">Sweep Porch</h5>
                         <p class="text-gray-700 text-base mb-4">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content.
+                            "Sweep the weeds into the yard"
                         </p>
                     </div>
                     <div class="block p-6 rounded-lg shadow-lg bg-green-300 max-w-md">
-                        <h5 class="text-gray-900 text-xl leading-tight font-medium mb-2">Pull Weeds</h5>
+                        <h5 class="text-gray-900 text-xl leading-tight font-medium mb-2"><span class="line-through">Pull Weeds</span><span class="text-red-600"> Discontinued!</span></h5>
                         <p class="text-gray-700 text-base mb-4">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content.
+                            "Pull them up from the ground"
                         </p>
                     </div>
                     <div class="block p-6 rounded-lg shadow-lg bg-purple-300 max-w-md">
                         <h5 class="text-gray-900 text-xl leading-tight font-medium mb-2">Clean Windows</h5>
                         <p class="text-gray-700 text-base mb-4">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content.
+                            "Cleany deapy sweepy cleany..."
                         </p>
                     </div>
                     <div class="block p-6 rounded-lg shadow-lg bg-red-300 max-w-md">
                         <h5 class="text-gray-900 text-xl leading-tight font-medium mb-2">Draw Pictures</h5>
                         <p class="text-gray-700 text-base mb-4">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content.
+                            Drawing is what I do.
                         </p>
                     </div>
                 </div>
