--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Avery George's Home Service</title>
     <link rel="stylesheet" href="output.css">
 </head>
 <body>
@@ -18,6 +18,7 @@
             <div class="text-center lg:w-2/3 w-full">
                 <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Avery George's Very Good Home
                     Service</h1>
+                <h2 class="title-font sm:text-2xl text-xl mb-4 font-medium text-gray-900 font-light">Offering home services in Argyle, TX</h1>
                 <p class="mb-8 leading-relaxed">Hi, I'm Avery. The things that I am going to do is: everything! Even dog
                     poop scooping.</p>
 
@@ -27,13 +28,13 @@
                     <div class="block p-6 rounded-lg shadow-lg bg-pink-300">
                         <h5 class="text-gray-900 text-xl leading-tight font-medium">Poop Scooping</h5>
                         <p class="text-gray-700 text-base mb-4">
-                            I already have all the materials!
+                            "I already have all the materials!"
                         </p>
                     </div>
                     <div class="block p-6 rounded-lg shadow-lg bg-blue-300">
                         <h5 class="text-gray-900 text-xl leading-tight font-medium mb-2">Water Plants</h5>
                         <p class="text-gray-700 text-base mb-4">
-                            When your plants are parched...</br>(mom is still working on a catchy saying)
+                            "When your plants are parched..."</br>(mom is still working on a catchy saying)
                         </p>
                     </div>
                     <div class="block p-6 rounded-lg shadow-lg bg-yellow-300">
@@ -57,11 +58,12 @@
                     <div class="block p-6 rounded-lg shadow-lg bg-red-300 max-w-md">
                         <h5 class="text-gray-900 text-xl leading-tight font-medium mb-2">Draw Pictures</h5>
                         <p class="text-gray-700 text-base mb-4">
-                            Drawing is what I do.
+                            "Drawing is what I do."
                         </p>
                     </div>
                 </div>
             </div>
+            <div class="bg-blue-500 hover:bg-blue-600 cursor-default rounded-md text-white px-4 py-3 my-5"><a href="tel:817-597-8218" class="">Contact Mom Today!</a></div>
         </div>
 
 
