--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                      src="./imgs/F9087410-81B0-40C5-9716-094195A09F7F_1_105_c.jpeg">
             </div>
             <div class="text-center lg:w-2/3 w-full">
-                <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Avery George's Very Good Home
+                <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Avery George's</br>Very Good Home
                     Service</h1>
                 <h2 class="title-font sm:text-2xl text-xl mb-4 font-medium text-gray-900 font-light">Offering home services in Argyle, TX</h1>
                 <p class="mb-8 leading-relaxed">Hi, I'm Avery. The things that I am going to do is: everything! Even dog
